# rng_buf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix  rng_buf.c  rng_buf.h  rng_buf_mt.c
gtest/: CMakeLists.txt  gtest-all.cc  gtest.h
src/: .gitignore  CMakeLists.txt  rng_buf.c  rng_buf_mt.c  rng_buf_tests.cc
